envoy-tcp-admin.yaml
static_resources:
  listeners:
    - name: listener_1
      address:
        socket_address: { address: 0.0.0.0, port_value: 10002 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite_literal: www.google.com
                            cluster: service_google
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service_google
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: service_envoyproxy_io
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: google.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: www.envoyproxy.io
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socketAddress: { address: 127.0.0.1, portValue: 9901 }
node:
  cluster: demo
  id: demo
  metadata: {}
